--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
 }
 
 .container {
+    position: relative;
     background-image: url('stars.png');
     background-size: cover;
     background-position: center;
@@ -13,7 +14,18 @@ body {
     align-items: center;
 }
 
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 500px;
+    background-color: rgba(0, 0, 255, 0.3);
+}
+
 .content {
+    position: relative;
+    z-index: 1;
     text-align: center;
     color: white;
 }
