--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,7 @@ body {
 }
 
 .container {
-    position: relative;
-    background-image: url('stars.png');
+    background-image: url('images/background.png');
     background-size: cover;
     background-position: center;
     height: 100vh;
@@ -14,18 +13,7 @@ body {
     align-items: center;
 }
 
-.overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 500px;
-    background-color: rgba(0, 0, 255, 0.3);
-}
-
 .content {
-    position: relative;
-    z-index: 1;
     text-align: center;
     color: white;
 }
