--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 .container {
-    background-image: url('../images/background.png');
+    background-image: url('../../images/background.png');
     background-size: cover;
     background-position: center;
     height: 100vh;
