--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,12 +20,12 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    height: 500px;
-    background-color: rgba(0, 0, 255, 0.5);
+    height: 300px;
+    background-color: rgba(0, 0, 100, 0.5);
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 100;
+    z-index: 5;
 }
 
 /* displayed content extra details */
@@ -57,17 +57,17 @@ button:hover {
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 100px;
-    background-color: rgba(0, 0, 255, 0.5);
+    height: 50px;
+    background-color: rgba(0, 0, 100, 0.5);
     display: flex;
     justify-content: space-between;
     align-items: center;
-    z-index: 100;
+    z-index: 5;
 }
 
 /* the copyright message at the bottom right */
 .bottom-overlay-copyright {
-    text-align: right;
+    text-align: right center;
     margin-right: 10px;
     color: white;
 }
@@ -79,4 +79,5 @@ button:hover {
     background-repeat: no-repeat;
     background-position: left center;
     padding-left: 10px;
+    z-index: 10;
 }
