--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body {
     left: 0;
     width: 100%;
     height: 300px;
-    background-color: rgba(0, 0, 100, 0.5);
+    background-color: rgba(0, 0, 125, 0.2);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -24,7 +24,7 @@ body {
 /* displayed content extra details */
 .overlay-content {
     text-align: center;
-    color: white;
+    color: black;
 }
 
 /* the download button */
@@ -51,7 +51,7 @@ button:hover {
     left: 0;
     width: 100%;
     height: 50px;
-    background-color: rgba(0, 0, 100, 0.5);
+    background-color: rgba(0, 0, 125, 0.2);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -62,7 +62,7 @@ button:hover {
 .bottom-overlay-copyright {
     text-align: right;
     margin-right: 50px;
-    color: white;
+    color: black;
 }
 
 /* the discord icon at the bottom left */
