--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body {
     left: 0;
     width: 100%;
     height: 300px;
-    background-color: rgba(0, 0, 125, 0.2);
+    background-color: rgba(0, 0, 125, 0.1);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -31,7 +31,7 @@ body {
 button {
     padding: 10px 20px;
     background-color: #007bff;
-    color: white;
+    color: black;
     border: none;
     border-radius: 5px;
     font-size: 16px;
@@ -51,7 +51,7 @@ button:hover {
     left: 0;
     width: 100%;
     height: 50px;
-    background-color: rgba(0, 0, 125, 0.2);
+    background-color: rgba(0, 0, 125, 0.1);
     display: flex;
     justify-content: space-between;
     align-items: center;
