--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,20 +58,8 @@ button:hover {
     z-index: 5;
 }
 
-/* the copyright message at the bottom right 
+/* the copyright message at the bottom right */
 .bottom-overlay-copyright {
-    text-align: right;
-    margin-right: 50px;
+    text-align: center;
     color: white;
-}
-*/
-
-/* the discord icon at the bottom left */
-.bottom-overlay-icon-discord {
-    background-image: url('../../images/discord-mark-white.png');
-    background-size: 75px 75px;
-    background-repeat: no-repeat;
-    background-position: left center;
-    padding-left: 50px;
-    z-index: 10;
 }
