--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,15 +53,14 @@ button:hover {
     height: 50px;
     background-color: rgb(37, 40, 43);
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     z-index: 5;
 }
 
 /* the copyright message at the bottom right */
 .bottom-overlay-copyright {
-    text-align: right;
-    margin-right: 50px;
+    padding-right: 50px;
     color: white;
 }
 
