--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,24 +52,21 @@ button:hover {
     width: 100%;
     height: 50px;
     background-color: rgb(37, 40, 43);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     z-index: 5;
 }
 
 /* the copyright message at the bottom right */
 .bottom-overlay-copyright {
-    padding-right: 50px;
+    position: absolute; /* Position relative to the overlay */
+    top: 50%; /* Move the text down by 50% of the overlay's height */
+    right: 50px; /* Position the text 50px from the right side */
     color: white;
 }
 
 /* the discord icon at the bottom left */
 .bottom-overlay-icon-discord {
-    background-image: url('../../images/discord-icon.png');
-    background-size: 75px 75px;
-    background-repeat: no-repeat;
-    background-position: left center;
-    padding-left: 50px;
-    z-index: 10;
+    position: absolute;
+    top: 50%;
+    left: 50px;
+    height: 40px;
 }
