--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,17 +58,17 @@ button:hover {
 /* the copyright message at the bottom right */
 .bottom-overlay-copyright {
     position: absolute; /* Position relative to the overlay */
-    bottom: 50%; /* Move the text up by 50% of the overlay's height */
+    bottom: 0; /* Align the text at the bottom of the overlay */
     right: 50px; /* Position the text 50px from the right side */
-    transform: translateY(-50%); /* Center the text vertically */
+    transform: translate(0, 50%); /* Center the text vertically */
     color: white;
 }
 
 /* the discord icon at the bottom left */
 .bottom-overlay-icon-discord {
     position: absolute; /* Position relative to the overlay */
-    bottom: 50%; /* Move the image up by 50% of the overlay's height */
+    bottom: 0; /* Align the image at the bottom of the overlay */
     left: 50px; /* Position the image 50px from the left side */
-    transform: translateY(-50%); /* Center the text vertically */
+    transform: translate(0, 50%); /* Center the image vertically */
     height: 40px;
 }
