cleanup, youtube and github icons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    height: 300px;
+    height: 400px;
     background-color: rgb(37 ,40 ,43);
     display: flex;
     justify-content: center;
@@ -41,6 +41,7 @@ button {
 
 /* when you hover over the download button */
 button:hover {
+    position: absolute;
     background-color: #0056b3;
 }
 
@@ -58,17 +59,31 @@ button:hover {
 /* the copyright message at the bottom right */
 .bottom-overlay-copyright {
     position: absolute; /* Position relative to the overlay */
-    bottom: 0; /* Align the text at the bottom of the overlay */
-    right: 50px; /* Position the text 50px from the right side */
-    transform: translate(0, 50%); /* Center the text vertically */
+    top: 0px; /* Align the text at the bottom of the overlay */
+    right: 10px; /* Position the text 10px from the right side */
     color: white;
 }
 
 /* the discord icon at the bottom left */
-.bottom-overlay-icon-discord {
+.buttom-overlay-icon-discord {
     position: absolute; /* Position relative to the overlay */
-    bottom: 0; /* Align the image at the bottom of the overlay */
+    top: 10px; /* Align the image at the bottom of the overlay */
+    left: 10px; /* Position the image 10px from the left side */
+    height: 30px;
+}
+
+/* the youtube icon at the bottom left */
+.buttom-overlay-icon-youtube {
+    position: absolute; /* Position relative to the overlay */
+    top: 10px; /* Align the image at the bottom of the overlay */
     left: 50px; /* Position the image 50px from the left side */
-    transform: translate(0, 50%); /* Center the image vertically */
-    height: 40px;
+    height: 30px;
+}
+
+/* the github icon at the bottom left */
+.buttom-overlay-icon-github {
+    position: absolute; /* Position relative to the overlay */
+    top: 10px; /* Align the image at the bottom of the overlay */
+    left: 90px; /* Position the image 90px from the left side */
+    height: 30px;
 }
