--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -1,7 +1,7 @@
 /* the main overlay used at the home page */
 .hp-main-overlay {
-    position: fixed;
-    top: 50px;
+    position: relative;
+    top: 0px;
     left: 0;
     width: 100%;
     height: 400px;
